💄 fix: tabs overflow and horizontal scrollbar height

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@ body {
 /* width */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 /* Track */
